--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,19 @@
     --dark-color: #385785;
 }
 
-body {
+html, body {
     background-color: var(--main-color);
     width: 100%;
+    min-height: 100%;
+    position: absolute;
+}
+
+#main-container {
+    min-height: 100vh;
+    overflow: hidden;
+    display: block;
+    position: relative;
+    padding-bottom: 100px;
 }
 
 a, a:hover, a:focus, a:active  {
@@ -56,6 +66,20 @@ a, a:hover, a:focus, a:active  {
     color: var(--dark-color);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     background-color: var(--soft-color);
+}
+
+.portfolio {
+    margin-bottom: 10%;
+}
+
+.project-main {
+    margin-bottom: 15%;
+}
+
+@media (min-width: 769px) {
+    .portfolio {
+        padding-bottom: 50px;
+    }
 }
 
 @media (max-width: 415px) {
