--- a/src/components/pages/Contact/ContactStyles.css
+++ b/src/components/pages/Contact/ContactStyles.css
@@ -5,7 +5,7 @@
     justify-self: center;
     margin: 2%;
     margin-bottom: 10% !important;
-    color: var(--tertierary-color)
+    color: var(--tertierary-color);
 }
 
 #contact-form {
