--- a/src/components/Project/ProjectStyles.css
+++ b/src/components/Project/ProjectStyles.css
@@ -11,7 +11,7 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     flex-basis: 50%;
     height: 50vh;
@@ -23,18 +23,27 @@
 }
 
 #project-img:hover {
-    opacity: 0.5;
+    opacity: 0.3;
     z-index: 1;
 }
 
 .show {
     position: relative;
     z-index: 1;
-    color: red;
+    color: white;
 }
 
 .show:hover {
     z-index: 9999;
+    color: black;
+}
+
+h2.show {
+    font-family:Georgia, 'Times New Roman', Times, serif;
+}
+
+h3.show {
+    font-family: 'Times New Roman', Times, serif;
 }
 
 @media (max-width: 1025px) {
