--- a/src/components/Project/ProjectStyles.css
+++ b/src/components/Project/ProjectStyles.css
@@ -1,3 +1,7 @@
+.project-main {
+    margin-bottom: 15%;
+}
+
 #cards-container {
     display: flex;
     flex-direction: row;
@@ -5,6 +9,9 @@
     flex-basis: 100%;
     margin-left: 150px;
     margin-right: 150px;
+    margin-bottom: 15%;
+    margin-top: 100px;
+    margin: 50px 150px;
 }
 
 .project-cards{
@@ -14,7 +21,7 @@
     justify-content: space-evenly;
     align-items: center;
     flex-basis: 50%;
-    height: 50vh;
+    height: 400px;
 }
 
 #project-img {
@@ -53,5 +60,34 @@ h3.show {
     }
     .project-cards {
         height: 20vh;
+        justify-content: center;
+    }
+    #project-img {
+        width: 400px !important;
+        height: 200px !important;
+    }
+}
+
+@media (max-width: 769px) {
+    #project-img {
+        width: 375px !important;
+        height: 200px !important;
+    }
+}
+
+@media (max-width: 415px) {
+    #cards-container {
+        flex-direction: column;
+    }
+    .project-cards{
+        margin-bottom: 75px;
+        height: 400px;
+    }
+}
+
+@media (max-width: 376px) {
+    #project-img {
+        width: 350px !important;
+        height: 200px !important;
     }
 }
