--- a/src/components/Project/ProjectStyles.css
+++ b/src/components/Project/ProjectStyles.css
@@ -1,4 +1,5 @@
 .project-main {
+    margin-top: 15%;
     margin-bottom: 15%;
 }
 
@@ -7,7 +8,6 @@
     flex-direction: row;
     flex-wrap: wrap;
     flex-basis: 100%;
-    margin: 50px 150px;
 }
 
 .project-cards{
